--- a/res/layout/radio.xml
+++ b/res/layout/radio.xml
@@ -4,34 +4,13 @@
 	 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
 		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content"
+		android:layout_height="match_parent"
 		android:orientation="vertical"
-	>
-	<TableLayout
-		android:id="@+id/tableId"
-		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content"
-		>
-		<TableRow>
-			<ImageButton
-				android:id="@+id/stopButton"
-				android:layout_width="fill_parent" 
-				android:layout_height="wrap_content" 
-				android:src="@drawable/start_button"
-				/>
-			<ImageButton
-				android:id="@+id/playButton"
-				android:layout_width="fill_parent" 
-				android:layout_height="wrap_content" 
-				android:src="@drawable/stop_button"
-				android:onClick="stopStream"
-				/>
-		</TableRow>
-	</TableLayout>
-	<TextView android:id="@+id/banner"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:text="stopped"
 		android:background="#ffffff"
-	/>
+        android:textColor="#000000"
+	>
+	<ListView android:id="@+id/rss_list"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		/>
 </LinearLayout>
