--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -1,5 +1,5 @@
 <resources>
     <style
             name="AppTheme"
-            parent="android:Theme.Holo.Light" />
+            parent="Theme.Sherlock.Light" />
 </resources>
