--- a/res/layout/radio.xml
+++ b/res/layout/radio.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- For a visual guido to GUI elements available see
-     http://www.droiddraw.org/widgetguide.html
-	 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
-		android:layout_width="fill_parent" 
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+		android:layout_width="match_parent" 
 		android:layout_height="match_parent"
-		android:orientation="vertical"
 		android:background="#ffffff"
         android:textColor="#000000"
 	>
@@ -13,4 +9,4 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		/>
-</LinearLayout>
+</RelativeLayout>
